Edit pagination buttons colors

--- a/public/assets/css/supplime2.css
+++ b/public/assets/css/supplime2.css
@@ -376,3 +376,12 @@ nav .icons .cart {
 .copyright span {
   color: var(--sec-color);
 }
+
+.page-link {
+  color: #28a745 !important;
+}
+.page-item.active .page-link {
+  background-color: var(--main-color) !important;
+  border-color: var(--main-color) !important;
+  color: white !important;
+}
