--- a/public/assets/css/shop.css
+++ b/public/assets/css/shop.css
@@ -8,6 +8,7 @@
 }
 .shop {
   margin-top: var(--t-margin);
+    margin-bottom: var(--t-margin);
 }
 .shop .category a {
   display: block;
@@ -86,4 +87,8 @@
 }
 .food .slide .one {
   background-color: var(--main-color);
+}
+.alert {
+    margin-top: 50%;
+    margin-left: 100%;
 }
